<?xml version="1.0" encoding="utf-8"?>

<com.summarecon.qcapp.customview.CustomScrollView
    android:id="@+id/root_scroll_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:gravity="center">

        <ImageView
            android:id="@+id/img_photo_preview"
            android:adjustViewBounds="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Spinner
                android:id="@+id/ddl_status_defect"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:spinnerMode="dialog"
                android:prompt="@string/hint_status_defect"/>

            <Spinner
                android:id="@+id/ddl_status_pekerjaan"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:spinnerMode="dialog"
                android:prompt="@string/hint_status_pekerjaan" />
        </LinearLayout>

        <EditText
            android:id="@+id/edt_note"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingTop="5dp"
            android:hint="@string/hint_note"/>
    </LinearLayout>
</com.summarecon.qcapp.customview.CustomScrollView>