<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <!-- ==============================PROFILE START============================================ -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical">

        <ImageView
            android:id="@+id/img_header_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_profile"/>

        <TextView
            android:id="@+id/txt_header_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/header_section_profile"
            android:textColor="#33b5e5"
            android:textStyle="bold"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#33b5e5"/>

    <ImageView
        android:id="@+id/img_profile_picture"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_launcher"/>

    <TextView
        android:id="@+id/txt_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Budiman S."
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txt_profile_nik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="20121203"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txt_profile_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Site Manager"
        android:textStyle="bold"/>
    <!-- ==============================PROFILE END============================================== -->

    <!-- ==============================NOTIFICATION START======================================= -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="left|center_vertical">

        <ImageView
            android:id="@+id/img_header_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_notifications"/>

        <TextView
            android:id="@+id/txt_header_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/header_section_notifications"
            android:textColor="#33b5e5"
            android:textStyle="bold"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#33b5e5"/>

    <ListView
        android:id="@+id/list_notifications"
        android:layout_width="match_parent"
        android:layout_height="149dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:divider="#cccccc"
        android:dividerHeight="1dp"
        android:choiceMode="singleChoice"/>
    <!-- ==============================NOTIFICATION END========================================= -->

    <!-- ==============================UPLOAD START============================================= -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical">

        <ImageView
            android:id="@+id/img_header_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_upload"/>

        <TextView
            android:id="@+id/txt_header_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/header_section_upload"
            android:textColor="#33b5e5"
            android:textStyle="bold"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#33b5e5"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:gravity="left|center_vertical">

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_upload"
            android:background="@drawable/blue_button_style"/>

        <TextView
            android:id="@+id/txt_last_uploaded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:paddingLeft="10dp"
            android:text="Last Upload : 12/12/2013 17:00"
            android:textStyle="bold"/>
    </LinearLayout>
    <!-- ==============================UPDATE END=============================================== -->
</LinearLayout>